--- a/mysite/index.html
+++ b/mysite/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Somya Jaiswal</title>
-  <link rel="stylesheet" href="/CSS/style.css">
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
