--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -66,7 +66,7 @@
             <button type="button" class="btn btn-outline-light btn-lg Download-btn"><i class='fab fa-google-play'></i> Download</button>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 title-image">
           <img class="idog" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
