--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -21,6 +21,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
   <!-- font awesom -->
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -62,7 +63,7 @@
         <div class="col-lg-6">
           <h1 class="heading">Meet new and interesting dogs nearby.</h1>
           <div class="buttton-download btn-download1">
-            <button type="button" class="btn btn-dark btn-lg Download-btn"> Download</button>
+            <button type="button" class="btn btn-dark btn-lg Download-btn"><i class="fab fa-apple"></i> Download</button>
             <button type="button" class="btn btn-outline-light btn-lg Download-btn"><i class='fab fa-google-play'></i> Download</button>
           </div>
         </div>
@@ -213,7 +214,7 @@
   <section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="btn btn-dark btn-lg Download-btn"> Download</button>
+    <button type="button" class="btn btn-dark btn-lg Download-btn"><i class="fab fa-apple"></i> Download</button>
     <button type="button" class="btn btn-outline-light btn-lg Download-btn"><i class='fab fa-google-play'></i> Download</button>
 
     <footer id="footer">
