--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -212,22 +212,28 @@
   <!-- Call to Action -->
 
   <section id="cta">
+    <div class="ending-footer">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="btn btn-dark btn-lg Download-btn"><i class="fab fa-apple"></i> Download</button>
-    <button type="button" class="btn btn-outline-light btn-lg Download-btn"><i class='fab fa-google-play'></i> Download</button>
 
-    <footer id="footer">
-      <p>© Copyright 2018 TinDog</p>
-    </footer>
+      <h1 class="footer-heading">Find the True Love of Your Dog's Life Today.</h3>
+        <button type="button" class="btn btn-dark btn-lg Download-btn"><i class="fab fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg Download-btn"><i class='fab fa-google-play'></i> Download</button>
+
+    </div>
 
   </section>
 
 
   <!-- Footer -->
 
+  <footer id="footer">
+    <h3>Follow me on social networks</h3>
+    <a href="https://www.facebook.com/som.jaiswal.144"class="fa-icon"><i class="fab fa-facebook"></i></a>
+    <a href="https://twitter.com/somj57"class="fa-icon"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/somya-jaiswal-48b32b19b"class="fa-icon"><i class="fab fa-linkedin"></i>  </a>
+    <p>© Copyright 2018 TinDog</p>
 
-
+  </footer>
 
 </body>
 
