--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -52,7 +52,10 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#cta">Downloads</a>
             </li>
           </ul>
         </div>
@@ -212,14 +215,10 @@
   <!-- Call to Action -->
 
   <section id="cta">
-    <div class="ending-footer">
 
-
-      <h1 class="footer-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <h1 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
         <button type="button" class="btn btn-dark btn-lg Download-btn"><i class="fab fa-apple"></i> Download</button>
         <button type="button" class="btn btn-outline-light btn-lg Download-btn"><i class='fab fa-google-play'></i> Download</button>
-
-    </div>
 
   </section>
 
@@ -227,9 +226,9 @@
   <!-- Footer -->
 
   <footer id="footer">
-    <a href="https://www.facebook.com/som.jaiswal.144"class="fa-icon"><i class="fab fa-facebook"></i></a>
-    <a href="https://twitter.com/somj57"class="fa-icon"><i class="fab fa-twitter"></i></a>
-    <a href="https://www.linkedin.com/in/somya-jaiswal-48b32b19b"class="fa-icon"><i class="fab fa-linkedin"></i>  </a>
+    <a href="https://www.facebook.com/som.jaiswal.144"class="fa-icon"><i class="social-icon fab fa-facebook-f"></i></a>
+    <a href="https://twitter.com/somj57"class="fa-icon"><i class="social-icon fab fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/somya-jaiswal-48b32b19b"class="social-icon fa-icon"><i class="fab fa-linkedin"></i>  </a>
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
