--- a/CssMysite/index.html
+++ b/CssMysite/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Somya Jaiswal</title>
+  <title>Basic Template</title>
   <link rel="stylesheet" href="static/main.css">
   <link rel="icon" href="images/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Alata&family=Noto+Sans&family=Sacramento&display=swap" rel="stylesheet">
