--- a/DrumKit/index.html
+++ b/DrumKit/index.html
@@ -14,13 +14,13 @@
   <h1 id="title">Drum 🥁 Kit</h1>
   <h2>Press the corrosponding key in keyboard or press it </h2>
   <div class="set">
-    <button class="w drum">w</button>
-    <button class="a drum">a</button>
-    <button class="s drum">s</button>
-    <button class="d drum">d</button>
-    <button class="j drum">j</button>
-    <button class="k drum">k</button>
-    <button class="l drum">l</button>
+    <button class="w W drum">w</button>
+    <button class="a A drum">a</button>
+    <button class="s S drum">s</button>
+    <button class="d D drum">d</button>
+    <button class="j J drum">j</button>
+    <button class="k K drum">k</button>
+    <button class="l L drum">l</button>
   </div>
 
   <script type="text/javascript" src="index.js">
