--- a/Photography/index.html
+++ b/Photography/index.html
@@ -12,7 +12,7 @@
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
-  <link href="./assets/apple-icon-180x180.png" rel="apple-touch-startup-image">
+  <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon">
   <link href="./assets/favicon.ico" rel="icon">
 
 
