--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -144,7 +144,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="testimonials-image2" src="images/techcrunch.png" alt="tc-logo">
+    <img class="testimonials-image2" src="images/TechCrunch.png" alt="tc-logo">
     <img class="testimonials-image2" src="images/tnw.png" alt="tnw-logo">
     <img class="testimonials-image2" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="testimonials-image2" src="images/mashable.png" alt="mashable-logo">
