--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Basic Template</title>
+  <title>TinDog🐶</title>
 
   <!-- local css and ico -->
   <link rel="stylesheet" href="css/styles.css">
