--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -48,7 +48,7 @@
                 <a class="dropdown-item" href="https://github.com/somj57/C-And-C-">C And C++ Projects</a>
                 <a class="dropdown-item" href="https://github.com/somj57/HtmlTemplates">Html Templates</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Photography</a>
+                <a class="dropdown-item" href="https://somj57.github.io/Photography">Photography</a>
               </div>
             </li>
             <li class="nav-item">
