--- a/Photography/index.html
+++ b/Photography/index.html
@@ -14,7 +14,7 @@
   
   <link href="assets/apple-icon-180x180.png" rel="apple-touch-icon">
   <link href="./assets/favicon.ico" rel="icon">
-
+  <meta property="og:image" content="assets/apple-icon-180x180.png">
 
 
   <title>Somya Jaiswal</title>  
