--- a/Photography/index.html
+++ b/Photography/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="Page description" name="description">
+  <meta content="Page description" name="This whole is about my journey toward my passion">
   <meta name="google" content="notranslate" />
   <meta content="Developed by Somya Jaiswal" name="Somya">
+  <meta name="description" content="This whole is about my journey toward my passion">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
