--- a/Photography/index.html
+++ b/Photography/index.html
@@ -8,14 +8,14 @@
   <meta content="Page description" name="This whole is about my journey toward my passion">
   <meta name="google" content="notranslate" />
   <meta content="Developed by Somya Jaiswal" name="Somya">
-  <meta name="description" content="This whole is about my journey toward my passion">
+  <meta name="description" content="This whole is about my journey toward my passion!">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
   <link href="assets/apple-icon-180x180.png" rel="apple-touch-icon">
   <link href="./assets/favicon.ico" rel="icon">
-  <meta property="og:image" content="assets/apple-icon-180x180.png">
+  <meta property="og:image" content="./assets/apple-icon-180x180.png">
 
 
   <title>Somya Jaiswal</title>  
