--- a/Md5/index.html
+++ b/Md5/index.html
@@ -7,14 +7,7 @@
 </head>
 
 <body>
-  <script language="JavaScript" src="calcMD5.js"></script>
-  <!-- <form class="" action="" method="post">
-    Enter Your Password:- <input type="password" name="input" value="" size="60" ><br><br>
-    <input type="submit" name="Convert" value="Convert" onclick="hash.value = calcMD5(input.value)"><br><br>
-    Hashed Password : <input type="text" name="hash" value=""size = "60"><br><br>
-
-
-  </form> -->
+  <script language="JavaScript" src="md5.js"></script>
   <form>
     <table>
       <tbody>
