--- a/Md5/index.html
+++ b/Md5/index.html
@@ -4,38 +4,44 @@
 <head>
   <meta charset="utf-8">
   <title>MD5 Hash Generator</title>
+  <link rel="stylesheet" href="md5.css">
+  <link rel="icon" href="som7.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Grandstander&family=Oswald&family=Ranchers&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <h1>MD5 Hash Generator</h1>
   <script language="JavaScript" src="md5.js"></script>
-  <form>
-    <table>
-      <tbody>
-        <tr>
-          <td>
-            <font color="blue" size="+1">Input:-</font>
-          </td>
-          <td> <input type="text" name="input" size="60"> </td>
-        </tr>
-        <tr>
-          <td>
-            <font color="blue" size="+1">Calculate:-</font>
-          </td>
-          <td>
+  <div class="section1">
+    <form>
+      <table>
+        <tbody>
+          <tr>
+            <td>
+              <font color="blue" size="+1">Input:-</font>
+            </td>
+            <td> <input type="password" name="input" size="60"> </td>
+          </tr>
+          <tr>
+            <td>
+              <font color="blue" size="+1">Calculate:-</font>
+            </td>
+            <td>
               <input type="button" value="MD5" onclick="hash.value = calcMD5(input.value).toUpperCase()">
-            </center>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <font color="blue" size="+1">Result:-</font>
-          </td>
-          <td> <input type="text" name="hash" size="60"> </td>
-        </tr>
-      </tbody>
-    </table>
-  </form>
+              </center>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <font color="blue" size="+1">Result:-</font>
+            </td>
+            <td> <input type="text" name="hash" size="60"> </td>
+          </tr>
+        </tbody>
+      </table>
+    </form>
 
+  </div>
 </body>
 
 </html>
