--- a/HashGenerator/index.html
+++ b/HashGenerator/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-<<<<<<< HEAD
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="https://github.com/somj57">
       <img src="som7.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy"></a>
@@ -23,38 +22,6 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-=======
-  <h1>MD5 Hash Generator</h1>
-  <script language="JavaScript" src="md5.js"></script>
-  <div class="section1">
-    <form>
-      <table>
-        <tbody>
-          <tr>
-            <td>
-              <font color="blue" size="+1">Input:-</font>
-            </td>
-            <td> <input type="password" name="input" size="60" onkeyup="hash.value = calcMD5(input.value).toUpperCase()" > </td>
-          </tr>
-          <tr>
-            <td>
-              <font color="blue" size="+1">Calculate:-</font>
-            </td>
-            <td>
-              <input type="button" value="MD5" onclick="hash.value = calcMD5(input.value).toUpperCase()">
-              </center>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <font color="blue" size="+1">Result:-</font>
-            </td>
-            <td> <input type="text" name="hash" size="60"> </td>
-          </tr>
-        </tbody>
-      </table>
-    </form>
->>>>>>> 214014eebd27ad92536542e658b23c69b88a5b54
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
@@ -73,8 +40,9 @@
       </ul>
     </div>
   </nav>
-  <div class="maincontent">
 
+  <!-- MD5 -->
+  <div class="maincontent">
     <h1>MD5 Hash Generator</h1>
     <script language="JavaScript" src="md5.js"></script>
     <div class="section1" id="generate">
@@ -93,6 +61,41 @@
               </td>
               <td>
                 <input type="button" value="MD5" onclick="hash.value = calcMD5(input.value).toUpperCase()">
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <font color="blue" size="+1">Result:-</font>
+              </td>
+              <td> <input type="text" name="hash" size="60"> </td>
+            </tr>
+          </tbody>
+        </table>
+      </form>
+
+    </div>
+  </div>
+
+  <!-- SHA1 -->
+  <div class="maincontent">
+    <h1>SHA1 Hash Generator</h1>
+    <script language="JavaScript" src="sha1.js"></script>
+    <div class="section1" id="generate">
+      <form>
+        <table>
+          <tbody>
+            <tr>
+              <td>
+                <font color="blue" size="+1">Input:-</font>
+              </td>
+              <td> <input type="password" name="input" size="60" onkeyup="hash.value = calcSHA1(input.value).toUpperCase()"> </td>
+            </tr>
+            <tr>
+              <td>
+                <font color="blue" size="+1">Calculate:-</font>
+              </td>
+              <td>
+                <input type="button" value="MD5" onclick="hash.value = calcSHA1(input.value).toUpperCase()">
               </td>
             </tr>
             <tr>
