--- a/Photography/index.html
+++ b/Photography/index.html
@@ -7,11 +7,13 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="Page description" name="This whole is about my journey toward my passion">
   <meta name="google" content="notranslate" />
+  	<meta property="og:url" content="http://somj57.github.io/Photography">
   <meta content="Developed by Somya Jaiswal" name="Somya">
   <meta name="description" content="This whole is about my journey toward my passion!">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
+  <link rel="icon" href="assets/apple-icon-180x180.png">
   
   <link href="assets/apple-icon-180x180.png" rel="apple-touch-icon">
   <link href="./assets/favicon.ico" rel="icon">
