--- a/Photography/index.html
+++ b/Photography/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="som7.ico">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="Page description" name="This whole is about my journey toward my passion">
@@ -13,7 +14,7 @@
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
-  <link rel="icon" href="assets/apple-icon-180x180.png">
+  
 
   <title>Somya Jaiswal</title>  
 
