--- a/Photography/index.html
+++ b/Photography/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="som7.ico">
-  <meta property="og:title" content="Photography">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://somj57.github.io/Photography">
-	<meta property="og:site_name" content="Somya Jaiswal">
-	<meta property="og:description" content="This is a simple visualization of my passion. ">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,initial-scale=1" name="viewport">
+  <meta content="Page description" name="This whole is about my journey toward my passion">
+  <meta name="google" content="notranslate" />
+  <meta property="og:url" content="http://somj57.github.io/Photography">
+  <meta content="Developed by Somya Jaiswal" name="Somya">
+  <meta name="description" content="This whole is about my journey toward my passion!">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
