--- a/Photography/index.html
+++ b/Photography/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="http://somj57.github.io/Photography">
   <meta content="Developed by Somya Jaiswal" name="Somya">
   <meta name="description" content="This whole is about my journey toward my passion!">
-  <!-- <script data-ad-client="ca-pub-6635635894921097" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+  <script data-ad-client="ca-pub-6635635894921097" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
