--- a/HashGenerator/index.html
+++ b/HashGenerator/index.html
@@ -59,7 +59,7 @@
               <td>
                 <font color="blue" size="+1">Input:-</font>
               </td>
-              <td> <input type="password" name="input" size="60" onkeyup="hash.value = calcMD5(input.value).toUpperCase()"> </td>
+              <td> <input type="password" name="input" size="60%" onkeyup="hash.value = calcMD5(input.value).toUpperCase()"> </td>
             </tr>
             <tr>
               <td>
@@ -73,7 +73,7 @@
               <td>
                 <font color="blue" size="+1">Result:-</font>
               </td>
-              <td> <input type="text" name="hash" size="60"> </td>
+              <td> <input type="text" name="hash" size="60%"> </td>
             </tr>
           </tbody>
         </table>
