--- a/HashGenerator/index.html
+++ b/HashGenerator/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://somj57.github.io/HashGenerator">
 	<meta property="og:site_name" content="Somya Jaiswal">
-	<meta property="og:description" content="Generate the HASH">
+	<meta property="og:description" content="Generate the HASH Code for your password">
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
