--- a/Photography/index.html
+++ b/Photography/index.html
@@ -86,7 +86,7 @@
         </div>
       </a>
     </div>
-
+<script data-ad-client="ca-pub-6635635894921097" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <div class="grid-item">
       <img class="img-responsive" alt="" src="./assets/images/00.jpg">
       <a href="https://www.instagram.com/somj.clicks/" class="project-description">
