--- a/SimonGame/index.html
+++ b/SimonGame/index.html
@@ -38,6 +38,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="game.js" charset="utf-8"></script>
+  <script data-ad-client="ca-pub-6635635894921097" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 
 </html>
