--- a/Photography/index.html
+++ b/Photography/index.html
@@ -86,7 +86,6 @@
         </div>
       </a>
     </div>
-<script data-ad-client="ca-pub-6635635894921097" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <div class="grid-item">
       <img class="img-responsive" alt="" src="./assets/images/00.jpg">
       <a href="https://www.instagram.com/somj.clicks/" class="project-description">
@@ -109,6 +108,17 @@
         </div>
       </a>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- photography -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6635635894921097"
+     data-ad-slot="7726601144"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <div class="grid-item">
       <img class="img-responsive" alt="" src="./assets/images/third.jpg">
       <a href="https://www.instagram.com/somj.clicks/" class="project-description">
@@ -461,6 +471,17 @@
         </div>
       </a>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- photography -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6635635894921097"
+     data-ad-slot="7726601144"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <div class="grid-item">
       <img class="img-responsive" alt="" src="./assets/images/28.jpg">
       <a href="https://www.instagram.com/somj.clicks/" class="project-description">
@@ -582,6 +603,17 @@
         </div>
       </a>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- photography -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6635635894921097"
+     data-ad-slot="7726601144"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <div class="grid-item">
       <img class="img-responsive" alt="" src="./assets/images/39.jpg">
       <a href="https://www.instagram.com/somj.clicks/" class="project-description">
