--- a/Photography/contact.html
+++ b/Photography/contact.html
@@ -74,8 +74,11 @@
       <p>You can reach to me threw following details</p>
     </div>
     <div class="section-container-spacer">
-       <form action="submit_form" method="post" class="reveal-content">
-          
+   
+            <div class="col-md-6">
+              <iframe src="https://us2.list-manage.com/contact-form?u=ebb9eda709ad043f1a6139341&form_id=291f059214a100eadb1441e938af52d3" width="100%" height="300" style="border:none;">
+              </iframe>
+            </div>
             <div class="col-md-6">
               <ul class="list-unstyled address-container">
                 <li>
@@ -111,15 +114,7 @@
                </a>
             </div>
           </div>
-        </form>
-    </div>
-    <div class="section-container-spacer">
-      <h1>Feedback</h1>
-    </div>
-    <div class="section-container-spacer">
-       <iframe src="https://us2.list-manage.com/contact-form?u=ebb9eda709ad043f1a6139341&form_id=291f059214a100eadb1441e938af52d3" title="W3Schools Free Online Web Tutorials">
-</iframe>
-    </div>
+    </div> 
   </div>
 </div>
 
