--- a/BackgroundGenerator/index.html
+++ b/BackgroundGenerator/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Background Generator</title>
+  <title>Background Generator🚀</title>
   <link rel="icon" href="https://raw.githubusercontent.com/somj57/Somya-jaiswal/master/som7.ico">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
